--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "seed:admin": "node --loader ts-node/esm src/scripts/seed-admin.ts"
+    "seed:admin": "node --loader ts-node/esm src/scripts/seed-admin.ts",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
@@ -48,5 +49,8 @@
     "ts-node": "^1.7.1",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
