--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "next lint",
     "seed:admin": "node --loader ts-node/esm src/scripts/seed-admin.ts",
     "postinstall": "prisma generate"
   },
@@ -23,13 +23,13 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
-    "next": "16.1.2",
+    "next": "15.1.6",
     "next-auth": "^4.24.13",
     "next-cloudinary": "^6.17.5",
     "nodemailer": "^7.0.12",
     "pg": "^8.17.0",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
@@ -40,10 +40,10 @@
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.5",
     "@types/pg": "^8.16.0",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "16.1.2",
+    "eslint-config-next": "15.1.6",
     "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "ts-node": "^1.7.1",
